# freezeFrame

./: 404.html  README.md  index.html  mkdocs.yml  motivations.md  objects.inv  plan.md  pyproject.toml  roadmap.md
api/exceptions/: index.html
api/field/: index.html
api/frame/: index.html
api/series/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: exceptions.md  field.md  frame.md  series.md
docs/getting-started/: immutability.md  installation.md  nulls.md  quickstart.md
docs/guide/: interop.md  schema.md  transforms.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/immutability/: index.html
guide/interop/: index.html
guide/nulls/: index.html
guide/schema/: index.html
guide/transforms/: index.html
search/: search_index.json
src/freezeframe/: __init__.py  _typing.py  column.py  exceptions.py  frame.py  schema.py  series.py
src/freezeframe/interop/: __init__.py  arrow.py  pandas.py  polars.py
src/freezeframe/ops/: __init__.py  filter.py  join.py  rename.py  select.py  sort.py  with_columns.py
tests/: test_column.py  test_frame.py  test_schema.py  test_series.py
