[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freezeframe"
version = "0.1.0"
description = "Immutable, schema-typed DataFrames backed by Apache Arrow"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["dataframe", "immutable", "arrow", "typed", "functional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
pandas = ["pandas>=3.0"]
polars = ["polars>=1.0"]
duckdb = ["duckdb>=1.0"]
all = ["pandas>=3.0", "polars>=1.0", "duckdb>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "ty>=0.0.1a6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/freezeframe"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (move type-only imports into TYPE_CHECKING blocks)
    "ANN", # flake8-annotations
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN401", # allow Any where genuinely needed (e.g. annotation resolver)
]

[tool.ruff.lint.isort]
known-first-party = ["freezeframe"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — type checking
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
